<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/Booking"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:maxLines="1"
        android:textSize="12sp"
        android:text="@string/quantity"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/header_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/Quantity_EditText"/>

    <EditText
        android:id="@+id/Quantity_EditText"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/outline_1"
        android:padding="4dp"
        android:maxLines="1"
        android:inputType="numberSigned"
        app:layout_constraintTop_toBottomOf="@id/label1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/currentprice"/>

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:maxLines="1"
        android:text="@string/amount"
        android:textSize="14sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/header_signup"
        app:layout_constraintStart_toStartOf="@id/currentprice"
        app:layout_constraintEnd_toEndOf="@id/currentprice"/>

    <TextView
        android:id="@+id/currentprice"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:maxLines="1"
        android:text="477500"
        android:textAlignment="center"
        android:background="@drawable/outline_2"
        app:layout_constraintTop_toBottomOf="@id/label2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/AmountToPay"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:background="@drawable/outline_1"
        app:layout_constraintTop_toBottomOf="@id/Quantity_EditText"
        app:layout_constraintStart_toStartOf="@id/Quantity_EditText"
        app:layout_constraintEnd_toEndOf="@id/currentprice"/>

    <TextView
        android:id="@+id/delta"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:background="@drawable/outline_1"
        app:layout_constraintTop_toBottomOf="@id/Quantity_EditText"
        app:layout_constraintStart_toEndOf="@id/AmountToPay"
        app:layout_constraintEnd_toEndOf="@id/currentprice"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:text="@string/log_out"
        app:layout_constraintTop_toBottomOf="@id/AmountToPay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>