<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Header_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/our_latest_bank_details"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/BankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank"
        android:layout_marginTop="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingEnd="4dp"
        android:textSize="16sp"
        android:background="@drawable/outline_1"
        app:layout_constraintTop_toBottomOf="@id/Header_bank"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/BankNameHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@drawable/outline_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/BankName"
        app:layout_constraintBottom_toBottomOf="@id/BankName"
        app:layout_constraintStart_toEndOf="@id/BankName"/>


    <TextView
        android:id="@+id/AccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingEnd="4dp"
        android:textSize="16sp"
        android:background="@drawable/outline_1"
        app:layout_constraintTop_toBottomOf="@id/BankName"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/AccountNameHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@drawable/outline_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/AccountName"
        app:layout_constraintBottom_toBottomOf="@id/AccountName"
        app:layout_constraintStart_toEndOf="@id/AccountName"/>

    <TextView
        android:id="@+id/AccountNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_no"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingEnd="4dp"
        android:textSize="16sp"
        android:background="@drawable/outline_1"
        app:layout_constraintTop_toBottomOf="@id/AccountName"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/AccountNoHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@drawable/outline_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/AccountNo"
        app:layout_constraintBottom_toBottomOf="@id/AccountNo"
        app:layout_constraintStart_toEndOf="@id/AccountNo"/>

    <TextView
        android:id="@+id/IFSC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ifsc"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingEnd="4dp"
        android:textSize="16sp"
        android:background="@drawable/outline_1"
        app:layout_constraintTop_toBottomOf="@id/AccountNoHolder"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/IFSCHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@drawable/outline_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/IFSC"
        app:layout_constraintBottom_toBottomOf="@id/IFSC"
        app:layout_constraintStart_toEndOf="@id/IFSC"/>

    <TextView
        android:id="@+id/Branch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Branch"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingEnd="4dp"
        android:textSize="16sp"
        android:background="@drawable/outline_1"
        app:layout_constraintTop_toBottomOf="@id/IFSC"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/BranchHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@drawable/outline_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/Branch"
        app:layout_constraintBottom_toBottomOf="@id/Branch"
        app:layout_constraintStart_toEndOf="@id/Branch"/>


    <ImageView
        android:id="@+id/ShareBankDetails"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/share"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ShareTextView"/>

    <TextView
        android:id="@+id/ShareTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp"
        android:textSize="14sp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/BranchHolder"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>