<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_buttons_1"
            android:layout_margin="12dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="1dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/CustomerRecords"
                    android:layout_gravity="center"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/outline_2"
                    android:scaleY="3"
                    android:scaleX="3"
                    android:src="@drawable/transaction" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/records"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="#50000000"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="1dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/margin"
                    android:layout_gravity="center"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/outline_2"
                    android:scaleY="3"
                    android:scaleX="3"
                    android:src="@drawable/margin" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/margin"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="#50000000"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:layout_columnSpan="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="1dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/Customer"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/outline_2"
                    android:scaleY="3"
                    android:scaleX="3"
                    android:layout_gravity="center"
                    android:src="@drawable/customer" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/customer"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="#50000000"
                    android:textSize="17sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:layout_columnSpan="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="1dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/alert"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/outline_2"
                    android:scaleY="3"
                    android:scaleX="3"
                    android:layout_gravity="center"
                    android:src="@drawable/feed" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/alert"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="#50000000"
                    android:textSize="17sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</LinearLayout>